crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_add_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: wasm_load_result
---
WASM File: add.wasm
============================================================
Success: true
Functions loaded: 1
============================================================
Module Output:
module {
  // Function 0
  fn add {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = %1 U32Add %0
      jump 1

    1:
      return %2

  }

}
