crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_arithmetic_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: wasm_load_result
---
WASM File: arithmetic.wasm
============================================================
Success: true
Functions loaded: 1
============================================================
Module Output:
module {
  // Function 0
  fn f {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = 4294967293 (u32)
      %3 = %1 U32Add %2
      %4 = 2 (u32)
      %5 = %0 U32Add %4
      %6 = %3 U32Mul %5
      jump 1

    1:
      return %6

  }

}
