crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_calls_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: wasm_load_result
---
WASM File: calls.wasm
============================================================
Success: true
Functions loaded: 4
============================================================
Module Output:
module {
  // Function 0
  fn func_0 {
    entry: 0

    0:
      jump 1

    1:
      return

  }

  // Function 1
  fn func_1 {
    parameters: [0]
    entry: 0

    0:
      jump 1

    1:
      return %0

  }

  // Function 2
  fn call_noop {
    entry: 0

    0:
      jump 1

    1:
      return

  }

  // Function 3
  fn call_ret1 {
    parameters: [0]
    entry: 0

    0:
      %1 = call 1(%0)
      jump 1

    1:
      return %1

  }

}
