crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_i64_arithmetic_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: wasm_load_result
---
WASM File: i64_arithmetic.wasm
============================================================
Success: true
Functions loaded: 1
============================================================
Module Output:
module {
  // Function 0
  fn i64_arithmetic_test {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = extracttuple %0, 0
      %3 = extracttuple %0, 1
      %4 = extracttuple %1, 0
      %5 = extracttuple %1, 1
      %6 = %2 U32Add %4
      %7 = %6 U32Less %2
      %8 = %3 U32Add %5
      %9 = %8 U32Add %7
      %10 = maketuple %6, %9
      %11 = extracttuple %0, 0
      %12 = extracttuple %0, 1
      %13 = extracttuple %1, 0
      %14 = extracttuple %1, 1
      %15 = %11 U32Sub %13
      %16 = %11 U32Less %13
      %17 = %12 U32Sub %14
      %18 = %17 U32Sub %16
      %19 = maketuple %15, %18
      %20 = extracttuple %10, 0
      %21 = extracttuple %10, 1
      %22 = extracttuple %19, 0
      %23 = extracttuple %19, 1
      %24 = %20 U32Add %22
      %25 = %24 U32Less %20
      %26 = %21 U32Add %23
      %27 = %26 U32Add %25
      %28 = maketuple %24, %27
      %29 = extracttuple %0, 0
      %30 = extracttuple %0, 1
      %31 = extracttuple %1, 0
      %32 = extracttuple %1, 1
      %33 = %29 U32Sub %31
      %34 = %29 U32Less %31
      %35 = %30 U32Sub %32
      %36 = %35 U32Sub %34
      %37 = maketuple %33, %36
      %38 = extracttuple %28, 0
      %39 = extracttuple %28, 1
      %40 = extracttuple %37, 0
      %41 = extracttuple %37, 1
      %42 = %38 U32Add %40
      %43 = %42 U32Less %38
      %44 = %39 U32Add %41
      %45 = %44 U32Add %43
      %46 = maketuple %42, %45
      jump 1

    1:
      return %46

  }

}
