crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_i64_bitwise_ops_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
assertion_line: 66
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: wasm_load_result
---
WASM File: i64_bitwise_ops.wasm
============================================================
Success: true
Functions loaded: 1
============================================================
Module Output:
module {
  // Function 0
  fn i64_bitwise_test {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = 2596069104 (u32)
      %3 = 305419896 (u32)
      %4 = maketuple %2, %3
      %5 = 2271560481 (u32)
      %6 = 4275878409 (u32)
      %7 = maketuple %5, %6
      %8 = extracttuple %4, 0
      %9 = extracttuple %4, 1
      %10 = extracttuple %7, 0
      %11 = extracttuple %7, 1
      %12 = %8 & (u32) %10
      %13 = %9 & (u32) %11
      %14 = maketuple %12, %13
      %15 = extracttuple %14, 0
      %16 = extracttuple %14, 1
      %17 = extracttuple %0, 0
      %18 = extracttuple %0, 1
      %19 = %15 | (u32) %17
      %20 = %16 | (u32) %18
      %21 = maketuple %19, %20
      %22 = extracttuple %21, 0
      %23 = extracttuple %21, 1
      %24 = extracttuple %1, 0
      %25 = extracttuple %1, 1
      %26 = %22 ^ (u32) %24
      %27 = %23 ^ (u32) %25
      %28 = maketuple %26, %27
      %29 = 4294967295 (u32)
      %30 = 4294967295 (u32)
      %31 = maketuple %29, %30
      %32 = extracttuple %28, 0
      %33 = extracttuple %28, 1
      %34 = extracttuple %31, 0
      %35 = extracttuple %31, 1
      %36 = %32 & (u32) %34
      %37 = %33 & (u32) %35
      %38 = maketuple %36, %37
      jump 1

    1:
      return %38

  }

}
