crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_if_statement_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: snapshot_content
---
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
expression: wasm_load_result
---
WASM File: if_statement.wasm
============================================================
Success: true
Functions loaded: 1
============================================================
Module Output:
module {
  // Function 0
  fn main {
    parameters: [0]
    entry: 0

    0:
      %1 = 3 (u32)
      %2 = %0 U32Eq %1
      %6 = 1 (u32)
      %7 = %0 U32Add %6
      jump 1

    1:
      %8 = %7
      jump 3

    2:
      %9 = 1 (u32)
      jump 3

    3:
      %10 = %9
      return %10

    4:
      %3 = 2 (u32)
      %4 = %0 U32Neq %3
      if %4 then jump 0 else jump 5

    5:
      %5 = 5 (u32)
      jump 1

    6:
      unreachable

  }

}
