crates/wasm/tests/snapshots/wasm_to_mir_tests__convert_locals_wasm.snap
---
source: crates/wasm/tests/wasm_to_mir_tests.rs
description: "WASM to MIR snapshot: locals.wat"
---
WASM File: locals.wat
Functions loaded: 1

Module Output:
module {
  // Function 0
  fn locals {
    entry: 0

    0:
      %0 = 10 (u32)
      %1 = 5 (u32)
      %2 = %0 U32Add %1
      jump 1

    1:
      return %2

  }

}
